remove all instances of stream not requiring sort or toArray